# kinematics_learning

./: .gitignore  .gitmodules  README.md
docker/: Dockerfile.gazebo11  Dockerfile.ml-cpu  README.md  all_X11.yml  all_nvidia.yml  build_gazebo11.bash  build_ml.bash  requirements.txt  run.bash
docker/patch/: mujoco_rendering.py
fkine/: .gitignore  README.md  compare_link_mono.py  compare_link_mono2.py  compare_link_mono3.py  control_marrtino.py  learn_link_mono.py  learn_marrtino_fkine.py  learn_policy_fkine.py  noisy_link_mono.py  plot_loss_error_dist.py  plot_x_xdot.py  screenshots.py  test.py  tune_fkine.py  utils.py
fkine/bak/: learn_policy.py  reacherPolicy.py  tune_fkine.py
fkine/fkine/: eval_tunning.py  fkine_common.py  fkine_linked.py  fkine_monolithic.py  learn.py
fkine/policy/: wraps.py
fkine/rgym/: __init__.py
fkine/tests/: autograd_jacobian.py  custom_env.py  optim_params.py  sample_random_poses.py
jacob/: .gitignore  compare_link_mono.py  learn_policy.py  learn_policy_fkine.py  re_learn_policy.py  test.py  tune_fkine.py  tune_policy.py  utils.py
jacob/fkine/: eval_tunning.py  fkine_common.py  learn.py  (+2 more)
learn/: README.md  fknet_AbsReacher.pth  fknet_learn.py  learn.py  networks.py
paper/: main.tex
rarms_gazebo/: CMakeLists.txt  README.md  package.xml
rarms_gazebo/config/control/: r2_control.yaml  r3_control.yaml  r4_control.yaml
rarms_gazebo/config/rviz/: r4.rviz
rarms_gazebo/launch/: r2.launch  r3.launch  r4.launch
rarms_gazebo/models/die/: model.config  model.sdf
rarms_gazebo/models/die/meshes/: Marker0.dae  Marker1.dae  Marker2.dae  Marker3.dae  Marker4.dae  Marker5.dae  Marker6.dae
rarms_gazebo/models/robot_box/: model.config  model.sdf
rarms_gazebo/src/: contacts.cpp  eff_control.py  gazebo_links.py  pos_control.py  traj_control.py
rarms_gazebo/urdf/: hand.xacro  hand2.xacro  r2_arm.xacro  r3_arm.xacro  r4_arm.xacro
rarms_gazebo/worlds/: base.world
test/: test_sb3.py
(+5189 files in other folders)
