<?xml version="1.0"?>
<package format="2">
  <name>rarms_gazebo</name>
  <version>0.0.0</version>
  <description>
    Gazebo simulation for robotic arms
  </description>

  <maintainer email="todo@todo.todo">TO DO</maintainer>
  <author email="todo@todo.todo">TO DO</author>
  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
